# MyStore

./: .env.sample  .gitignore  README.md  catalog.json  groups.json  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0018_alter_product_options.py  0019_alter_product_options.py  0020_alter_product_options.py  0021_alter_product_options.py  0022_alter_product_options.py  0023_alter_product_options.py  0024_alter_product_is_published.py
catalog/templates/main/: index.html  product_list.html
config/: settings.py
users/: admin.py  forms.py  urls.py  views.py
